# crime-research-kit

./: .dockerignore  .gitignore  .gitleaks.toml  .prototools  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  moon.yml  pyproject.toml
.agents/skills/: README.md  catalog.json
.github/: README.md
.github/workflows/: audit.yml  ci.yml  release.yml
.moon/: workspace.yml
.moon/hooks/: pre-push
.moon/tasks/: tooling.yml
deployment/: .env.example  Dockerfile  README.md  docker-compose.yml
deployment/scripts/: README.md  bootstrap-ollama.sh  bootstrap.ps1  bootstrap.sh  bootstrap_env.py  branch_gate.py  check.py  compose.py  export_trcr_ufb.mjs  install.py  venv_exec.py
deployment/searxng/: limiter.toml  settings.yml
deployment/tooling/: README.md  manifest.json
docs/: README.md  case-builder-langgraph.md  lanes.json  mcp-server.md  skill-api-spec.md
docs/guides/: README.md  cli-surface.json  skill-api-spec.md
docs/integrations/: mcp-server.md
docs/reference/: skill-api-spec.md
docs/registry/: README.md  env_vars.json  lanes.schema.json
docs/runbook/: README.md  case-workflow.md  export-artifacts.md  install.md  public-output-readiness.md  self-hosted-deployment.md
docs/schemas/: README.md  place.schema.json  research_action.schema.json
frontend/: README.md  app.ts  package-lock.json  package.json  styles.css
frontend/styles/: motion.css  nav.css  report.css  visuals.css
frontend/visuals/: detail.ts  forcefield.ts  model.ts  renderers.ts
src/: README.md  cli.py
src/case_builder/: README.md  __init__.py  casefile.py  cli.py  config.py
src/core/: README.md  casefile.py  config.py
src/crime_research_kit/: README.md  __init__.py
src/truecrime_cult_research_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  helpers.py  test_case_builder_structure.py  test_export_analysis_charts.py  test_export_case_charts.py  test_export_timeline.py  test_lanes_docs_generation.py  test_lanes_json.py  test_lanes_registry.py  test_langgraph_resume.py  test_link_names.py  test_llm_nodes.py  test_llm_provider.py  test_local_stack.py  test_mcp_context.py  test_mcp_server.py  test_mcp_tools_read.py  test_mcp_tools_write_gated.py  test_ops_case_sources.py  test_ops_extraction.py  test_ops_policy.py  test_ops_query_review_exports.py  test_ops_result.py  test_ops_runner.py  test_ops_source_text.py  test_packet_agent.py  test_pipeline_nodes.py  test_pipeline_runner.py  test_pipeline_state.py  test_schemas.py  test_service_resume.py  test_skill_docs_tool_access.py  test_trcr_improvements.py
tests/e2e/: test_langgraph_resume.py  test_mcp_server.py  test_pipeline_runner.py  test_service_resume.py
tests/fixtures/: README.md
tests/governance/: test_case_builder_structure.py  test_ci_parity.py  test_env_and_providers.py  test_import_boundaries.py  test_lanes_docs_generation.py  test_lanes_json.py  test_packaging_policy.py  test_release_readiness.py  test_repository_shape.py  test_runbook_coverage.py  test_schemas.py  test_secret_floor.py  test_skill_docs_tool_access.py  test_tooling_manifest.py
tests/integration/: test_export_safety.py  test_link_names.py  test_llm_nodes.py  test_local_stack.py  test_mcp_tools_read.py  test_mcp_tools_write_gated.py  test_ops_case_sources.py  test_ops_extraction.py  (+4 more)
(+906 files in other folders)
