[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "truecrime-cult-research-kit"
version = "0.1.0"
description = "Codex skill and CLI scaffolding for data-first true crime and cult-origin research organization."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.20.0",
  "beautifulsoup4>=4.12.0",
  "trafilatura>=1.8.0",
  "pandas>=2.0.0",
  "networkx>=3.0",
]
agentic = [
  "langgraph",
  "langsmith",
]
web-local = [
  "playwright>=1.50.0",
  "scrapy>=2.12.0",
  "trafilatura>=1.8.0",
]
documents = [
  "docling>=2.0.0",
  "ocrmypdf>=16.0.0",
  "pillow>=10.0.0",
  "pymupdf>=1.24.0",
]
retrieval = [
  "diskcache>=5.6.0",
  "llama-index-core>=0.14.0",
  "llama-index-embeddings-huggingface>=0.7.0",
  "llama-index-vector-stores-qdrant>=0.10.0",
  "qdrant-client>=1.18.0",
  "sentence-transformers>=3.0.0",
]
memory-local = [
  "mem0ai>=2.0.0",
  "qdrant-client>=1.18.0",
]

[project.scripts]
trcr-case-builder = "case_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
