[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crime-research-kit"
version = "0.11.0"
description = "Agentic skill, MCP, SDK, and CLI scaffolding for data-first crime research."
requires-python = ">=3.10"
license = {text = "AGPL-3.0-only"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.20.0",
  "beautifulsoup4>=4.12.0",
  "trafilatura>=1.8.0",
  "pandas>=2.0.0",
  "networkx>=3.0",
]
agentic = [
  "langgraph",
  "langgraph-checkpoint-sqlite",
]
llm = [
  "langchain>=0.3",
  "langchain-ollama>=0.2",
]
mcp = [
  "mcp>=1.2.0",
]
web-local = [
  "playwright>=1.50.0",
  "scrapy>=2.12.0",
  "trafilatura>=1.8.0",
]
documents = [
  "docling>=2.0.0",
  "ocrmypdf>=16.0.0",
  "pillow>=10.0.0",
  "pymupdf>=1.24.0",
]
retrieval = [
  "diskcache>=5.6.0",
  "llama-index-core>=0.14.0",
  "llama-index-embeddings-huggingface>=0.7.0",
  "llama-index-vector-stores-qdrant>=0.10.0",
  "qdrant-client>=1.18.0",
  "sentence-transformers>=3.0.0",
]
memory-local = [
  "mem0ai>=2.0.0",
  "qdrant-client>=1.18.0",
]
governance = [
  "pip-audit==2.10.1",
  "pip-licenses==5.5.5",
  "cyclonedx-bom==7.3.0",
  "build>=1.2",
]

[project.scripts]
cr-kit = "cli:main"
crk-mcp = "adapters.interfaces.mcp.server:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adapters*", "core*", "pipeline*"]
namespaces = true

[tool.setuptools.package-data]
"core.lanes" = [
  "registry_data/*.json",
  "registry_data/lanes/*.json",
  "registry_data/templates/*.json",
]

[tool.pytest.ini_options]
testpaths = [
  "tests/runtime",
  "tests/quality",
]
pythonpath = ["src", "."]
markers = [
  "unit: pure functions and small helpers",
  "integration: ops, CLI-adjacent, filesystem, and component-boundary tests",
  "e2e: full graph, service, or MCP orchestration tests",
  "governance: repository policy, schemas, generated docs, and skill drift checks",
  "smoke: fast heartbeat coverage for the main workflow",
]
